// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphProvider "Default" 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="border-1 border-gray-300 rounded-lg shadow-md overflow-hidden p-2 mr-2"
        style="opacity: 1; pointer-events: all; position: relative; overflow: hidden; width: 100%; height: 100%;"
      >
        <div
          class="joint-paper joint-theme-default"
          style="position: relative; width: 800px; height: 600px;"
        >
          <div
            class="joint-paper-background"
            joint-selector="background"
            style="position: absolute; inset: 0;"
          />
          <svg
            height="100%"
            id="v-2"
            joint-selector="svg"
            style="position: absolute; inset: 0; overflow: hidden;"
            width="100%"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <style
              id="v-3"
              type="text/css"
            >
              CDATASection {}
            </style>
            <defs
              joint-selector="defs"
            />
            <g
              class="joint-layers"
              joint-selector="layers"
            >
              <g
                class="joint-grid-layer"
                style="pointer-events: none;"
              />
              <g
                class="joint-back-layer"
              />
              <g
                class="joint-cells-layer joint-viewport"
                style="webkit-user-select: none; user-select: none;"
              />
              <g
                class="joint-labels-layer joint-viewport"
                style="webkit-user-select: none; user-select: none;"
              />
              <g
                class="joint-front-layer"
              />
              <g
                class="joint-tools-layer"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="border-1 border-gray-300 rounded-lg shadow-md overflow-hidden p-2 mr-2"
      style="opacity: 1; pointer-events: all; position: relative; overflow: hidden; width: 100%; height: 100%;"
    >
      <div
        class="joint-paper joint-theme-default"
        style="position: relative; width: 800px; height: 600px;"
      >
        <div
          class="joint-paper-background"
          joint-selector="background"
          style="position: absolute; inset: 0;"
        />
        <svg
          height="100%"
          id="v-2"
          joint-selector="svg"
          style="position: absolute; inset: 0; overflow: hidden;"
          width="100%"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <style
            id="v-3"
            type="text/css"
          >
            CDATASection {}
          </style>
          <defs
            joint-selector="defs"
          />
          <g
            class="joint-layers"
            joint-selector="layers"
          >
            <g
              class="joint-grid-layer"
              style="pointer-events: none;"
            />
            <g
              class="joint-back-layer"
            />
            <g
              class="joint-cells-layer joint-viewport"
              style="webkit-user-select: none; user-select: none;"
            />
            <g
              class="joint-labels-layer joint-viewport"
              style="webkit-user-select: none; user-select: none;"
            />
            <g
              class="joint-front-layer"
            />
            <g
              class="joint-tools-layer"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`GraphProvider "WithExternalGraph" 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="border-1 border-gray-300 rounded-lg shadow-md overflow-hidden p-2 mr-2"
        style="opacity: 1; pointer-events: all; position: relative; overflow: hidden; width: 100%; height: 100%;"
      >
        <div
          class="joint-paper joint-theme-default"
          style="position: relative; width: 800px; height: 600px;"
        >
          <div
            class="joint-paper-background"
            joint-selector="background"
            style="position: absolute; inset: 0;"
          />
          <svg
            height="100%"
            id="v-4"
            joint-selector="svg"
            style="position: absolute; inset: 0; overflow: hidden;"
            width="100%"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <style
              id="v-5"
              type="text/css"
            >
              CDATASection {}
            </style>
            <defs
              joint-selector="defs"
            />
            <g
              class="joint-layers"
              joint-selector="layers"
            >
              <g
                class="joint-grid-layer"
                style="pointer-events: none;"
              />
              <g
                class="joint-back-layer"
              />
              <g
                class="joint-cells-layer joint-viewport"
                style="webkit-user-select: none; user-select: none;"
              />
              <g
                class="joint-labels-layer joint-viewport"
                style="webkit-user-select: none; user-select: none;"
              />
              <g
                class="joint-front-layer"
              />
              <g
                class="joint-tools-layer"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="border-1 border-gray-300 rounded-lg shadow-md overflow-hidden p-2 mr-2"
      style="opacity: 1; pointer-events: all; position: relative; overflow: hidden; width: 100%; height: 100%;"
    >
      <div
        class="joint-paper joint-theme-default"
        style="position: relative; width: 800px; height: 600px;"
      >
        <div
          class="joint-paper-background"
          joint-selector="background"
          style="position: absolute; inset: 0;"
        />
        <svg
          height="100%"
          id="v-4"
          joint-selector="svg"
          style="position: absolute; inset: 0; overflow: hidden;"
          width="100%"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <style
            id="v-5"
            type="text/css"
          >
            CDATASection {}
          </style>
          <defs
            joint-selector="defs"
          />
          <g
            class="joint-layers"
            joint-selector="layers"
          >
            <g
              class="joint-grid-layer"
              style="pointer-events: none;"
            />
            <g
              class="joint-back-layer"
            />
            <g
              class="joint-cells-layer joint-viewport"
              style="webkit-user-select: none; user-select: none;"
            />
            <g
              class="joint-labels-layer joint-viewport"
              style="webkit-user-select: none; user-select: none;"
            />
            <g
              class="joint-front-layer"
            />
            <g
              class="joint-tools-layer"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`GraphProvider "WithExternalGraphAndLayout" 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="bg-blue-500 cursor-pointer hover:bg-blue-700 text-white font-bold py-2 px-4 rounded m-2 text-sm"
      >
        Make layout
      </button>
      <div
        class="border-1 border-gray-300 rounded-lg shadow-md overflow-hidden p-2 mr-2"
        style="opacity: 1; pointer-events: all; position: relative; overflow: hidden; width: 100%; height: 100%;"
      >
        <div
          class="joint-paper joint-theme-default"
          style="position: relative; width: 800px; height: 600px;"
        >
          <div
            class="joint-paper-background"
            joint-selector="background"
            style="position: absolute; inset: 0;"
          />
          <svg
            height="100%"
            id="v-10"
            joint-selector="svg"
            style="position: absolute; inset: 0; overflow: hidden;"
            width="100%"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <style
              id="v-11"
              type="text/css"
            >
              CDATASection {}
            </style>
            <defs
              joint-selector="defs"
            />
            <g
              class="joint-layers"
              joint-selector="layers"
            >
              <g
                class="joint-grid-layer"
                style="pointer-events: none;"
              />
              <g
                class="joint-back-layer"
              />
              <g
                class="joint-cells-layer joint-viewport"
                style="webkit-user-select: none; user-select: none;"
              />
              <g
                class="joint-labels-layer joint-viewport"
                style="webkit-user-select: none; user-select: none;"
              />
              <g
                class="joint-front-layer"
              />
              <g
                class="joint-tools-layer"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <button
      class="bg-blue-500 cursor-pointer hover:bg-blue-700 text-white font-bold py-2 px-4 rounded m-2 text-sm"
    >
      Make layout
    </button>
    <div
      class="border-1 border-gray-300 rounded-lg shadow-md overflow-hidden p-2 mr-2"
      style="opacity: 1; pointer-events: all; position: relative; overflow: hidden; width: 100%; height: 100%;"
    >
      <div
        class="joint-paper joint-theme-default"
        style="position: relative; width: 800px; height: 600px;"
      >
        <div
          class="joint-paper-background"
          joint-selector="background"
          style="position: absolute; inset: 0;"
        />
        <svg
          height="100%"
          id="v-10"
          joint-selector="svg"
          style="position: absolute; inset: 0; overflow: hidden;"
          width="100%"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <style
            id="v-11"
            type="text/css"
          >
            CDATASection {}
          </style>
          <defs
            joint-selector="defs"
          />
          <g
            class="joint-layers"
            joint-selector="layers"
          >
            <g
              class="joint-grid-layer"
              style="pointer-events: none;"
            />
            <g
              class="joint-back-layer"
            />
            <g
              class="joint-cells-layer joint-viewport"
              style="webkit-user-select: none; user-select: none;"
            />
            <g
              class="joint-labels-layer joint-viewport"
              style="webkit-user-select: none; user-select: none;"
            />
            <g
              class="joint-front-layer"
            />
            <g
              class="joint-tools-layer"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`GraphProvider "WithLink" 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="border-1 border-gray-300 rounded-lg shadow-md overflow-hidden p-2 mr-2"
        style="opacity: 1; pointer-events: all; position: relative; overflow: hidden; width: 100%; height: 100%;"
      >
        <div
          class="joint-paper joint-theme-default"
          style="position: relative; width: 800px; height: 600px;"
        >
          <div
            class="joint-paper-background"
            joint-selector="background"
            style="position: absolute; inset: 0;"
          />
          <svg
            height="100%"
            id="v-6"
            joint-selector="svg"
            style="position: absolute; inset: 0; overflow: hidden;"
            width="100%"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <style
              id="v-7"
              type="text/css"
            >
              CDATASection {}
            </style>
            <defs
              joint-selector="defs"
            />
            <g
              class="joint-layers"
              joint-selector="layers"
            >
              <g
                class="joint-grid-layer"
                style="pointer-events: none;"
              />
              <g
                class="joint-back-layer"
              />
              <g
                class="joint-cells-layer joint-viewport"
                style="webkit-user-select: none; user-select: none;"
              />
              <g
                class="joint-labels-layer joint-viewport"
                style="webkit-user-select: none; user-select: none;"
              />
              <g
                class="joint-front-layer"
              />
              <g
                class="joint-tools-layer"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="border-1 border-gray-300 rounded-lg shadow-md overflow-hidden p-2 mr-2"
      style="opacity: 1; pointer-events: all; position: relative; overflow: hidden; width: 100%; height: 100%;"
    >
      <div
        class="joint-paper joint-theme-default"
        style="position: relative; width: 800px; height: 600px;"
      >
        <div
          class="joint-paper-background"
          joint-selector="background"
          style="position: absolute; inset: 0;"
        />
        <svg
          height="100%"
          id="v-6"
          joint-selector="svg"
          style="position: absolute; inset: 0; overflow: hidden;"
          width="100%"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <style
            id="v-7"
            type="text/css"
          >
            CDATASection {}
          </style>
          <defs
            joint-selector="defs"
          />
          <g
            class="joint-layers"
            joint-selector="layers"
          >
            <g
              class="joint-grid-layer"
              style="pointer-events: none;"
            />
            <g
              class="joint-back-layer"
            />
            <g
              class="joint-cells-layer joint-viewport"
              style="webkit-user-select: none; user-select: none;"
            />
            <g
              class="joint-labels-layer joint-viewport"
              style="webkit-user-select: none; user-select: none;"
            />
            <g
              class="joint-front-layer"
            />
            <g
              class="joint-tools-layer"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`GraphProvider "WithoutSizeDefinedInElements" 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="border-1 border-gray-300 rounded-lg shadow-md overflow-hidden p-2 mr-2"
        style="opacity: 0; pointer-events: none; position: relative; overflow: hidden; width: 100%; height: 100%;"
      >
        <div
          class="joint-paper joint-theme-default"
          style="position: relative; width: 800px; height: 600px;"
        >
          <div
            class="joint-paper-background"
            joint-selector="background"
            style="position: absolute; inset: 0;"
          />
          <svg
            height="100%"
            id="v-8"
            joint-selector="svg"
            style="position: absolute; inset: 0; overflow: hidden;"
            width="100%"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <style
              id="v-9"
              type="text/css"
            >
              CDATASection {}
            </style>
            <defs
              joint-selector="defs"
            />
            <g
              class="joint-layers"
              joint-selector="layers"
            >
              <g
                class="joint-grid-layer"
                style="pointer-events: none;"
              />
              <g
                class="joint-back-layer"
              />
              <g
                class="joint-cells-layer joint-viewport"
                style="webkit-user-select: none; user-select: none;"
              />
              <g
                class="joint-labels-layer joint-viewport"
                style="webkit-user-select: none; user-select: none;"
              />
              <g
                class="joint-front-layer"
              />
              <g
                class="joint-tools-layer"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="border-1 border-gray-300 rounded-lg shadow-md overflow-hidden p-2 mr-2"
      style="opacity: 0; pointer-events: none; position: relative; overflow: hidden; width: 100%; height: 100%;"
    >
      <div
        class="joint-paper joint-theme-default"
        style="position: relative; width: 800px; height: 600px;"
      >
        <div
          class="joint-paper-background"
          joint-selector="background"
          style="position: absolute; inset: 0;"
        />
        <svg
          height="100%"
          id="v-8"
          joint-selector="svg"
          style="position: absolute; inset: 0; overflow: hidden;"
          width="100%"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <style
            id="v-9"
            type="text/css"
          >
            CDATASection {}
          </style>
          <defs
            joint-selector="defs"
          />
          <g
            class="joint-layers"
            joint-selector="layers"
          >
            <g
              class="joint-grid-layer"
              style="pointer-events: none;"
            />
            <g
              class="joint-back-layer"
            />
            <g
              class="joint-cells-layer joint-viewport"
              style="webkit-user-select: none; user-select: none;"
            />
            <g
              class="joint-labels-layer joint-viewport"
              style="webkit-user-select: none; user-select: none;"
            />
            <g
              class="joint-front-layer"
            />
            <g
              class="joint-tools-layer"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`graph-provider should render children and match snapshot 1`] = `
<div>
  Child Content
</div>
`;

exports[`graph-provider should render children and match snapshot 2`] = `
<DocumentFragment>
  <div>
    Child Content
  </div>
</DocumentFragment>
`;
